Add function to calculate item price depending of input

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 .bold {
   font-weight: bold;
 }
@@ -140,18 +142,22 @@ input[type=checkbox] {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: end;
-  -ms-flex-align: end;
-  align-items: flex-end;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   color: #0aaf0a;
   font-size: 20px;
+}
+
+.item--price:after {
+  content: '€';
 }/*TOTAL*/.footer__section {
   display: -webkit-box;
   display: -ms-flexbox;
